# darpa_subt_worlds

./: CMakeLists.txt  README.md  indian_tunnel.world  package.xml
cave_citcuit/: cave_circuit_04.sdf
cave_q/: cave_qual.sdf
cave_qual/: cave_qual.sdf
cave_simple_03/: simple_cave_03.sdf
final2/: final_event_06.sdf
final_prelim_02/: final_prelim_02.sdf
final_prelim_03/: final_prelim_03.sdf
final_prize_world/: final_event_03.sdf
final_round/: final_event_05.sdf
final_system/: finals_systems_prelim2.sdf
gazebo_cave_world-master/launch/: cave_world.launch
gazebo_cave_world-master/worlds/: lava_tube.world
gazebo_cave_world-master/worlds/models/: ._Apriltag36_11_00014
gazebo_cave_world-master/worlds/models/cave_world/lava_tube/: model.config
gazebo_cave_world-master/worlds/models/cave_world/materials/scripts/: lava_tube.material
gazebo_cave_world-master/worlds/models/cave_world/meshes/: lava_tube.mtl
launch/: cave_world.launch
tunnel_simple03/: simple_tunnel_03.sdf
virtual_stix/: virtual_stix.sdf
worlds/: .cave_world.world.swp  cave_world.world  lvt
worlds/models/cave_world/: model.sdf
worlds/models/cave_world/lava_tube/: model.sdf
worlds/models/cave_world/meshes/lvt/: model.config  model.sdf
